--- a/love.html
+++ b/love.html
@@ -92,7 +92,7 @@
         <img src="image/one.jpg" id="logo">  <!-- 头像自定义 -->
     </div>
     <canvas class="canvas" width="1820" height="905"></canvas>
-    <p class="text" style="color: #ffcccc;">我们已经相伴了💕
+    <p class="text" style="color: #ffcccc;">我们已经相伴了
     <span id="span_dt_dt"></span><br>你的男朋友QMQ😘
     </p>
     <script language="javascript">
@@ -120,7 +120,7 @@
             init: function () {
                 S.Drawing.init('.canvas');
                 document.body.classList.add('body--ready');
-			 S.UI.simulate("TY❤️|很高兴遇见你|永远记得|初次相遇|无比神奇|希望今后|予你欢乐|伴你左右|做你依靠|携手共进|未来可期|感谢有你|#countdown 3|贪吃不胖永远可爱😜|#countdown 3|I love you！❤️|#time");
+			 S.UI.simulate("TY❤️|很高兴遇见你|永远记得|初次相遇|无比神奇|希望今后|予你欢乐|伴你左右|做你依靠|携手共进|未来可期|感谢有你|#countdown 3|I love you！❤️|#time");
                 S.Drawing.loop(function () {
                     S.Shape.render();
                 });
