--- a/ty.html
+++ b/ty.html
@@ -120,7 +120,7 @@
             init: function () {
                 S.Drawing.init('.canvas');
                 document.body.classList.add('body--ready');
-				S.UI.simulate("TY❤️|很高兴遇见你|永远记得|初次相遇|无比神奇|希望今后|予你欢乐|伴汝左右|做你依靠|不负于你|携手共进|感谢有你|#countdown 3|I love you！❤️|#time");
+				S.UI.simulate("TY❤️|仝宝小宝贝|瘦瘦又可爱|永远记得你|懵懂与机灵|未来很美好|希望你快乐|无论有何事|愿你向光明||不负韶华|心之所向|皆有可能|......|遇见你很高兴！|#time");
                 S.Drawing.loop(function () {
                     S.Shape.render();
                 });
