--- a/love.html
+++ b/love.html
@@ -42,7 +42,7 @@
                 background-size: cover;
                 border-radius: 200px;
                 box-shadow: 0px 0px 40px rgba(63, 81, 181, 0.72);
-                border: 3px solid #00a0ff;
+                border: 3px solid #FF0FF5;
                 opacity: 1;
                 margin: 0 auto;
                 margin-top: 20px;
