--- a/love.html
+++ b/love.html
@@ -22,10 +22,10 @@
             }
             .body--ready {
                 background: -webkit-linear-gradient(top, rgb(255, 245, 238) 0%, rgb(255,174,185) 120%);
-                background: -moz-linear-gradient(top, rgb(203, 235, 219) 0%, rgb(55, 148, 192) 120%);
-                background: -o-linear-gradient(top, rgb(203, 235, 219) 0%, rgb(55, 148, 192) 120%);
-                background: -ms-linear-gradient(top, rgb(203, 235, 219) 0%, rgb(55, 148, 192) 120%);
-                background: linear-gradient(top, rgb(203, 235, 219) 0%, rgb(55, 148, 192) 120%);
+                background: -moz-linear-gradient(top, rgb(255, 245, 238) 0%, rgb(255, 174, 185) 120%);
+                background: -o-linear-gradient(top, rgb(255, 245, 238) 0%, rgb(255, 174, 185) 120%);
+                background: -ms-linear-gradient(top, rgb(255, 245, 238) 0%, rgb(255, 174, 185) 120%);
+                background: linear-gradient(top, rgb(255, 245, 238) 0%, rgb(255, 174, 185) 120%);
             }
             .text {
                 position: fixed;
@@ -122,7 +122,7 @@
             init: function () {
                 S.Drawing.init('.canvas');
                 document.body.classList.add('body--ready');
-			 S.UI.simulate("TY❤️|很高兴遇见你|永远记得|初次相遇|无比神奇|希望今后|予你欢乐|伴你左右|做你依靠|携手共进|未来可期||感谢有你❤|#countdown 3|I love you！❤️|#time");
+			 S.UI.simulate("TY❤️|很高兴遇见你|永远记得|初次相遇|无比神奇|希望今后|予你欢乐|伴你左右|做你依靠|携手共进|未来可期||感谢有你❤|#countdown 3|I love you！❤||#time");
                 S.Drawing.loop(function () {
                     S.Shape.render();
                 });
